--- a/roles/mantlui/meta/main.yml
+++ b/roles/mantlui/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - role: certificates
-    when: do_mantlui_ssl
-  - role: distributive
-    current_role: mantlui
+#  - role: certificates
+#    when: do_mantlui_ssl
+#  - role: distributive
+#    current_role: mantlui
