--- a/playbooks/c12e_customize.yml
+++ b/playbooks/c12e_customize.yml
@@ -3,9 +3,9 @@
 - hosts: all
   sudo: yes
   vars: 
-    mantl_config_dir: ~/projects/mantl-config/aws/ihc/CognitiveProdStack
+    mantl_config_dir: ~/projects/mantl-config/aws/ihc/sihc
     certs_root: ~/projects/mantl-config
-    wildcard_certs_dir: "{{ certs_root }}/ihc.c1.io.certs"
+    wildcard_certs_dir: "{{ certs_root }}/c1.io.certs"
     use_wildcard_certs: "yes"
     wildcard_keys: 
       - wildcard.c1.io.key.pem
@@ -13,7 +13,9 @@
       - wildcard.c1.io.cert.pem
   tasks:
     - debug: msg="{{mantl_config_dir}}"
-
+      tags:
+        - private_config
+        
     - name: install some basics
       yum:
         name: "{{item}}"
@@ -31,6 +33,7 @@
         - etcd
         - skydns
         - kubelet
+      ignore_errors: yes
 
     - name: disable un-needed services
       sudo: yes
@@ -42,12 +45,38 @@
         - etcd
         - skydns
         - kubelet
+      ignore_errors: yes
 
+# cleardata centos ami issue
     - name: remove bad kernel.hostname entry in /etc/sysctl.conf 
       lineinfile: 
         dest: /etc/sysctl.conf
         line: "kernel.hostname = ip-172-31-51-114"
         state: absent
+      ignore_errors: yes
+      
+    - name: remove un-needed distributive jobs
+      sudo: yes
+      file:
+        state: absent
+        dest:  /etc/distributive.d/distributive-chronos.json
+
+    - name: remove un-needed consul checks
+      sudo: yes
+      file:
+        state: absent
+        dest: "/etc/consul/{{ item }}"
+      with_items:
+        - distributive-chronos-check.json
+        - etcd-service.json
+
+    - name: re-enable systemd units with re-start problems
+      sudo: yes
+      command: systemctl reenable "{{ item }}"
+      with_items:
+        - nginx-consul
+        - consul
+        - sumologic-collector      
 
     - name: template rules.toml file
       template:
@@ -55,6 +84,14 @@
         dest: "/etc/traefik/rules.toml"
       when: inventory_hostname in groups['role=edge']
 
+    # - name: REMOVE ME tmp remove bad dirs 
+    #   file:
+    #     state: absent
+    #     dest: /cs/beanstalk/prod-ihc/validic-ingest
+    #   tags:
+    #     - private_config
+    #   when: inventory_hostname in groups['role=worker']
+              
     - name: make the destination directories
       file:
         state: directory
@@ -92,6 +129,8 @@
     - name: concatenate CA and wildcard.cert for traefik
       sudo: yes
       shell: cat {{ traefik_routed_cert_path }} {{ traefik_routed_CA_chain_path }}  > {{ traefik_routed_chain_path }}
+      when: inventory_hostname in groups['role=edge']
+ 
 
     - name: concatenate private key with cert for mongo
       sudo: yes
@@ -103,21 +142,4 @@
       shell: cat /public_certs/container.cert.pem /public_certs/ca.cert.pem > /public_certs/ca-chain.cert.pem
       when: inventory_hostname in groups['role=worker']
 
-    - name: touch the /root/keyfile on workers
-      file:
-        state: touch
-        dest: /root/keyfile
-        mode: 0600
-      when: inventory_hostname in groups['role=worker']
-
-    - name: place a /root/keyfile on worker nodes for mongo
-      sudo: yes
-      copy: 
-        dest: /root/keyfile
-        mode: 0600
-        content: fluffyPizza
-      when: inventory_hostname in groups['role=worker']
-
-    # - include: wildcard_ssl.yml
-    #   when: (use_wildcard_certs == 'yes')
 
