--- a/playbooks/upgrade-consul.yml
+++ b/playbooks/upgrade-consul.yml
@@ -28,7 +28,7 @@
     - name: create secure acl
       sudo: yes
       run_once: yes
-      command: consul-cli acl-update --token={{ consul_acl_master_token }} --name="Mantl Secure Token" --rule='key:secure:write' --rule='service::write' {{ consul_acl_secure_token }}
+      command: consul-cli acl update --token={{ consul_acl_master_token }} --name="Mantl Secure Token" --rule='key:secure:write' --rule='service::write' {{ consul_acl_secure_token }}
       when: consul_create_secure_acl
       tags:
         - consul
