--- a/roles/consul/tasks/nginx_proxy.yml
+++ b/roles/consul/tasks/nginx_proxy.yml
@@ -23,7 +23,7 @@
 - name: write nginx config vars to the consul k/v
   run_once: yes
   command: >
-    consul-cli kv-write --token={{ consul_acl_secure_token }}
+    consul-cli kv write --token={{ consul_acl_secure_token }}
     "{{ item.path }}" "{{ item.content }}"
   with_items:
     - path: secure/consul/nginx/do_ssl
@@ -36,7 +36,7 @@
 - name: install nginx admin password
   sudo: yes
   run_once: yes
-  command: consul-cli kv-write --token={{ consul_acl_secure_token }} secure/service/nginx/auth/users/admin '{{ nginx_admin_password_encrypted }}'
+  command: consul-cli kv write --token={{ consul_acl_secure_token }} secure/service/nginx/auth/users/admin '{{ nginx_admin_password_encrypted }}'
   when: nginx_admin_password_encrypted is defined
   tags:
     - consul
