--- a/roles/kibana/tasks/install.yml
+++ b/roles/kibana/tasks/install.yml
@@ -10,7 +10,7 @@
 
 - name: check if services are registered
   sudo: yes
-  shell: "consul-cli catalog-service {{ item.value.service_name }} | jq '.|length'"
+  shell: "consul-cli catalog service {{ item.value.service_name }} | jq '.|length'"
   register: kibana_service_count
   changed_when: false
   with_dict: kibana_packages
@@ -19,7 +19,7 @@
 
 - name: install kibana
   sudo: yes
-  command: consul-cli kv-write --token={{ consul_acl_mantl_api_token }} mantl-install/apps/kibana @/etc/marathon/apps/{{ kibana_packages.kibana.dest }}
+  command: consul-cli kv write --token={{ consul_acl_mantl_api_token }} mantl-install/apps/kibana @/etc/marathon/apps/{{ kibana_packages.kibana.dest }}
   when: "{{ item.stdout|int == 0 and item.item.key == 'kibana' }}"
   with_items: kibana_service_count.results
   tags:
