--- a/roles/marathon/tasks/jobs.yml
+++ b/roles/marathon/tasks/jobs.yml
@@ -2,7 +2,7 @@
 - name: create consul acl for mantl-api
   sudo: yes
   run_once: yes
-  command: consul-cli acl-update --token={{ consul_acl_master_token }} --name="Mantl API ACL Token" --rule='key:mantl-install/apps:write' {{ consul_acl_mantl_api_token }}
+  command: consul-cli acl update --token={{ consul_acl_master_token }} --name="Mantl API ACL Token" --rule='key:mantl-install/apps:write' {{ consul_acl_mantl_api_token }}
   tags:
     - marathon
 
