--- a/roles/mesos/tasks/leader.yml
+++ b/roles/mesos/tasks/leader.yml
@@ -85,7 +85,7 @@
 
 - name: write iptables configuration
   run_once: true
-  command: consul-cli kv-write --token={{ consul_acl_secure_token }} secure/mesos/leader/ip_tables {{ do_mesos_iptables }}
+  command: consul-cli kv write --token={{ consul_acl_secure_token }} secure/mesos/leader/ip_tables {{ do_mesos_iptables }}
   tags:
     - mesos
     - security_rotation
