support Debian common role distributive package does not support .deb (blockage)

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -42,72 +42,11 @@
   tags:
     - common
 
-# add yum-utils if not already installed
-- name: add yum-config-manager
-  sudo: yes
-  yum:
-    name: yum-utils
-  tags:
-    - bootstrap
+- include: RedHat-install.yml
+  when: ansible_os_family == 'RedHat'
 
-- name: increase timeouts in YUM
-  sudo: yes
-  shell: "yum-config-manager --save --setopt {{ item.option }}={{ item.value }}"
-  with_items:
-    - option: timeout
-      value: 60.0
-    - option: retries
-      value: 30
-
-- name: enable EPEL repo
-  sudo: yes
-  yum:
-    name: epel-release
-    state: latest
-  tags:
-    - bootstrap
-
-- name: install system utilities
-  sudo: yes
-  yum:
-    name: "{{ item }}"
-    state: latest
-  with_items:
-    - httpd-tools
-    - nc
-    - openssh
-    - policycoreutils-python
-    - libselinux-python
-    - unzip
-    - jq
-    - java-1.8.0-openjdk
-    - chrony
-    - smlr
-    - zookeepercli
-  tags:
-    - bootstrap
-
-- name: enable chronyd
-  sudo: yes
-  service:
-    name: chronyd
-    enabled: yes
-    state: started
-
-- name: disable firewalld
-  sudo: yes
-  service:
-    name: firewalld
-    enabled: false
-    state: stopped
-  register: command_result
-  failed_when: "command_result|failed and 'No such file or directory' not in command_result.msg"
-
-- name: install pip
-  sudo: yes
-  yum:
-    name: python-pip
-    state: latest
+- include: Debian-install.yml
+  when: ansible_os_family == 'Debian'
 
 - name: update setuptools and pip
   sudo: yes
@@ -117,6 +56,7 @@
   with_items:
     - name: pip
     - name: setuptools
+  when: ansible_os_family == 'RedHat'
 
 - name: disable requiretty in sudoers
   sudo: yes
@@ -134,7 +74,15 @@
   tags:
     - security
     - bootstrap
+  when: ansible_os_family == 'RedHat'
 
 - include: users.yml
+  when: ansible_os_family == 'RedHat'
+  
 - include: ssh.yml
-- include: fail2ban.yml
+
+- include: RedHat-fail2ban.yml
+  when: ansible_os_family == 'RedHat'
+
+- include: Debian-fail2ban.yml
+  when: ansible_os_family == 'Debian'
