--- a/playbooks/check-requirements.yml
+++ b/playbooks/check-requirements.yml
@@ -13,8 +13,7 @@
     # Change concurrently with the required ansible version in requirements.txt
     - name: check for compatible Ansible version
       when: >
-        ansible_version["string"] | version_compare("1.9.1", "<")
-        or ansible_version["string"] | version_compare("2", ">=")
+        ansible_version["string"] | version_compare("2", "<=")
       fail:
         msg: >
           Your version of Ansible doesn't match the required version. Please
