--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -35,11 +35,11 @@
     - vault
 
 - name: deregister vault service in consul
-  command: consul-cli service-deregister vault
+  command: consul-cli service deregister vault
 
 - name: register vault service in consul
   command: >
-    consul-cli service-register
+    consul-cli service register
     --port=8200
     --check='script:15s:test "$(curl -s -1 https://localhost:8200/v1/sys/seal-status | jq .sealed) == false"'
     vault
